[gd_scene load_steps=5 format=3 uid="uid://ovd30kxxs3wr"]

[ext_resource type="Script" path="res://scripts/DrawViewport.gd" id="1_p2k7l"]
[ext_resource type="Shader" path="res://main.gdshader" id="2_k3aop"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ydd7u"]
shader = ExtResource("2_k3aop")
shader_parameter/test = 0.0
shader_parameter/rules = PackedFloat32Array(0, 0, 0, 1, 1, 1, 1, 0)

[sub_resource type="ImageTexture" id="ImageTexture_rwvu0"]

[node name="DrawViewport" type="SubViewportContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
stretch = true
script = ExtResource("1_p2k7l")

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Content" type="TextureRect" parent="SubViewport"]
texture_filter = 1
material = SubResource("ShaderMaterial_ydd7u")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("ImageTexture_rwvu0")
stretch_mode = 5

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="resized" from="." to="." method="_on_resized"]
